In this commit basice instaletion of docker files

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-boy=awais
+WORDPRESS_DB_HOST=mysql
+WORDPRESS_DB_USER=awais
+WORDPRESS_DB_PASSWORD=abc
+WORDPRESS_DB_NAME=awais
+MYSQL_ROOT_PASSWORD: abc
+MYSQL_DATABASE: awais
+MYSQL_USER: awais
+MYSQL_PASSWORD: abc
+PMA_HOST=mysql
+PMA_PORT=3306
