--- a/bin/webserver/Dockerfile
+++ b/bin/webserver/Dockerfile
@@ -1,3 +1,1 @@
-FROM php:7.2-apache
-RUN apt-get update && apt-get -y install mariadb-client
-RUN  docker-php-ext-install mysqli && docker-php-ext-enable mysqli   
+FROM wordpress:5.2.2-php7.3-apache
